Salesforce/main/default/main/default/objects/Lead/fields/Apodo__c.field-meta.xml
<CustomField>
    <fullName>Apodo__c</fullName>
    <label>Apodo</label>
    <length>80</length>
    <type>Text</type>
</CustomField>