Salesforce/main/default/main/default/objects/Lead/fields/Area_Total_Plantada__c.field-meta.xml
<CustomField>
    <fullName>Area_Total_Plantada__c</fullName>
    <label>Area Total Plantada</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>