Salesforce/main/default/main/default/objects/Lead/fields/Data_de_Nascimento__c.field-meta.xml
<CustomField>
    <fullName>Data_de_Nascimento__c</fullName>
    <label>Data de Nascimento</label>
    <type>Date</type>
</CustomField>