Salesforce/main/default/main/default/objects/Lead/fields/Tipo_Usuario__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Usuario__c</fullName>
    <label>Tipo Usuario</label>
    <length>25</length>
    <type>Text</type>
</CustomField>