Salesforce/main/default/main/default/objects/Lead/listViews/Miscandidatosnoledos.listView-meta.xml
<ListView>
    <fullName>Miscandidatosnoledos</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.RATING</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.STATUS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.UNREAD</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Mis candidatos no leídos</label>
</ListView>